--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,13 @@
   background: url("/public/static/img/home/ctn-bg.png");
 }
 
-  
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover,
-  input:-webkit-autofill:focus,
-  input:-webkit-autofill:active {
-    transition: background-color 5000s ease-in-out 0s;
-  }
+#login-bg {
+  background: url("/public/static/img/home/login-img.png");
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
