--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,13 @@ input:-webkit-autofill:active {
 .feature-list {
   @apply flex items-start gap-2.5 sm:text-lg text-[var(--secondary-color)];
 }
+
+.radio-btn:checked label{
+  accent-color: #448cd2 !important;
+}
+.label-active:has(input:checked) {
+  background: #E4F0FC;
+  border: 1px solid #448CD233;
+  box-shadow: 4px 4px 4px 0px #448CD21A;
+}
+
