--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,25 @@ input:-webkit-autofill:active {
 .dashboard-menu [aria-expanded="true"] .dashboard-icon {
     rotate: 180deg !important;
 }
+.main-wrapper.active .dashboard-menu ul span {
+    display: none;
+}
+
+.main-wrapper.active .restore-sidebar {
+    rotate: 180deg;
+}
+
+.main-wrapper.active .manager-popup h4 {
+    display: none;
+}
+.main-wrapper.active .manager-popup button {
+    display: none;
+}
+
+.main-wrapper.active .left-content {
+    max-width: 119px;
+}
+
+.main-wrapper.active .right-content {
+    margin-left: 145px;
+}
