--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,7 @@ input:-webkit-autofill:active {
 .main-wrapper.active .right-content {
     margin-left: 145px;
 }
+.main-wrapper.active .manager-popup {
+    padding: 6px;
+    border-radius: 6px;
+}
