--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,47 @@ input:-webkit-autofill:active {
 }
 
 
+
+.loader-wrapper {
+              position: fixed;
+              inset: 0;
+              background: radial-gradient(circle at center, #f9fafb, #eef2f7);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              z-index: 9999;
+            }
+
+            .loader {
+              position: relative;
+              width: 80px;
+              height: 80px;
+            }
+
+            .loader span {
+              position: absolute;
+              inset: 0;
+              border-radius: 50%;
+              border: 4px solid transparent;
+              animation: rotate 1.5s linear infinite;
+            }
+
+            .loader span:nth-child(1) {
+              border-top-color: #6366f1;
+            }
+
+            .loader span:nth-child(2) {
+              border-right-color: #22c55e;
+              animation-delay: 0.3s;
+            }
+
+            .loader span:nth-child(3) {
+              border-bottom-color: #ec4899;
+              animation-delay: 0.6s;
+            }
+
+            @keyframes rotate {
+              100% {
+                transform: rotate(360deg);
+              }
+            }
