--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,9 @@
   scroll-behavior: smooth;
 }
 
-#hero-bg {
+/* #hero-bg {
   background: url("/public/static/img/home/hero-bg-effect.png");
-}
+} */
 
 #cta-bg {
   background: url("/public/static/img/home/ctn-bg.png");
@@ -128,3 +128,42 @@ input:-webkit-autofill:active {
   box-shadow: 4px 4px 4px 0px #448cd21a;
   color: #fff;
 }
+
+
+
+
+.bg-svg svg {
+    width: 100%;
+    height: auto;
+    display: block;
+    transform: scale(1.1);
+}
+ .bg-svg #smoothPath {
+    fill: none;
+    stroke-width: 90;
+    stroke-linecap: round;
+
+    /* Path drawing */
+    stroke-dasharray: 6200;
+    stroke-dashoffset: 6200;
+
+    /* Smooth premium animation */
+    animation:
+      drawLine 6s cubic-bezier(0.4, 0, 0.2, 1) forwards,
+      fadeIn 1.2s ease-out forwards;
+  }
+
+  @keyframes drawLine {
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
