--- a/src/index.css
+++ b/src/index.css
@@ -129,9 +129,6 @@ input:-webkit-autofill:active {
   color: #fff;
 }
 
-
-
-
 .bg-svg svg {
     width: 100%;
     height: auto;
@@ -166,4 +163,12 @@ input:-webkit-autofill:active {
     to {
       opacity: 1;
     }
+  }
+
+
+  @media ( max-width:767px){
+    .bg-svg svg {
+    
+    transform: scale(1.6);
+}
   }
